{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 97,
  "lineage": "e6c7ee5d-2886-c54a-5987-c239bcc6e5c3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "cdc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:085935842926:vpc/vpc-0de3ae04981480cb9",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-067916884e51a5f8f",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0600a7ce461ff31fa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "bowo-vpc"
                ]
              }
            ],
            "id": "vpc-0de3ae04981480cb9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01d46bbae7ef6c643",
            "owner_id": "085935842926",
            "tags": {
              "Name": "bowo-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:085935842926:security-group/sg-0070e8dee5354665e",
            "description": "Security group for PostgreSQL publicly open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0070e8dee5354665e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "public access",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "eks cluster access",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis-security-group-20230718090055728100000001",
            "name_prefix": "redis-security-group-",
            "owner_id": "085935842926",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "redis-security-group"
            },
            "tags_all": {
              "Name": "redis-security-group"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0de3ae04981480cb9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cdc_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all access",
            "from_port": 0,
            "id": "sgrule-1249278411",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0070e8dee5354665e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cdc_vpc",
            "module.security_groups.aws_security_group.this",
            "module.security_groups.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "eks cluster access",
            "from_port": 6379,
            "id": "sgrule-3977110650",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0070e8dee5354665e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cdc_vpc",
            "module.security_groups.aws_security_group.this",
            "module.security_groups.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "public access",
            "from_port": 6379,
            "id": "sgrule-2676823179",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0070e8dee5354665e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cdc_vpc",
            "module.security_groups.aws_security_group.this",
            "module.security_groups.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}